# scrappy

./: Cargo.toml  README.md  publish.py
scrappy-actor/: Cargo.toml
scrappy-actor/src/: actor.rs  context.rs  handler.rs  lib.rs  registry.rs  stream.rs  supervisor.rs  sync.rs  utils.rs
scrappy-actor/src/actors/: resolver.rs
scrappy-actor/src/fut/: mod.rs  result.rs
scrappy-actor/tests/: derive.rs  test_actor.rs  test_actors.rs  test_address.rs  test_arbiter.rs  test_connected.rs  test_context.rs  test_fut.rs  test_lifecycle.rs  test_sink.rs  test_supervisor.rs  test_sync.rs
scrappy-client/: Cargo.toml
scrappy-client/src/: builder.rs  connect.rs  error.rs  frozen.rs  lib.rs  request.rs  response.rs  sender.rs  test.rs  ws.rs
scrappy-client/tests/: test_client.rs  test_rustls_client.rs  test_ssl_client.rs  test_ws.rs
scrappy-codec/: Cargo.toml
scrappy-connect/: Cargo.toml
scrappy-connect/src/: connector.rs  lib.rs  resolve.rs  service.rs
scrappy-connect/src/ssl/: openssl.rs  rustls.rs
scrappy-connect/tests/: test_connect.rs
scrappy-cors/: Cargo.toml
scrappy-cors/src/: lib.rs
scrappy-derive/: Cargo.toml
scrappy-derive/src/: message.rs  message_response.rs
scrappy-derive/tests/: test_macro.rs
scrappy-files/: Cargo.toml
scrappy-files/src/: error.rs  lib.rs  named.rs
scrappy-framed/: Cargo.toml
scrappy-framed/src/: app.rs  helpers.rs  lib.rs  request.rs  route.rs  service.rs  test.rs
scrappy-framed/tests/: test_server.rs
scrappy-http/: Cargo.toml
scrappy-http-test/: Cargo.toml
scrappy-http-test/src/: lib.rs
scrappy-http/examples/: echo.rs  echo2.rs  hello-world.rs
scrappy-http/src/: body.rs  builder.rs  cloneable.rs  config.rs  error.rs  lib.rs  request.rs  response.rs  service.rs  test.rs
scrappy-http/src/client/: connection.rs  connector.rs  error.rs  h1proto.rs  h2proto.rs  pool.rs
scrappy-http/src/cookie/: builder.rs  draft.rs  jar.rs  mod.rs
scrappy-http/src/cookie/secure/: key.rs  private.rs  signed.rs
scrappy-http/src/encoding/: decoder.rs  encoder.rs
scrappy-http/src/h1/: client.rs  codec.rs  decoder.rs  dispatcher.rs  expect.rs  payload.rs  service.rs  upgrade.rs  utils.rs
scrappy-http/src/h2/: dispatcher.rs  service.rs
scrappy-http/src/header/common/: accept.rs  accept_charset.rs  accept_language.rs  allow.rs  cache_control.rs  content_disposition.rs  content_language.rs  content_type.rs  date.rs  etag.rs  expires.rs  if_match.rs  if_modified_since.rs  if_none_match.rs  if_range.rs  if_unmodified_since.rs  last_modified.rs
scrappy-http/src/ws/: codec.rs  dispatcher.rs  proto.rs
scrappy-http/tests/: test_client.rs  test_openssl.rs  test_rustls.rs  test_server.rs  test_ws.rs
scrappy-identity/: Cargo.toml
scrappy-identity/src/: lib.rs
scrappy-ioframe/: Cargo.toml
scrappy-ioframe/src/: connect.rs  dispatcher.rs  error.rs  service.rs
scrappy-ioframe/tests/: test_server.rs
scrappy-macros/: Cargo.toml
scrappy-macros/src/: lib.rs
scrappy-multipart/: Cargo.toml
scrappy-multipart/src/: error.rs  extractor.rs  server.rs
scrappy-router/: Cargo.toml
scrappy-router/src/: resource.rs
scrappy-rt/: Cargo.toml
scrappy-rt/src/: arbiter.rs  builder.rs  lib.rs  runtime.rs
scrappy-server/: Cargo.toml
scrappy-server/src/: accept.rs  builder.rs  config.rs  service.rs  signals.rs  socket.rs  worker.rs
scrappy-server/tests/: test_server.rs
scrappy-service/: Cargo.toml
scrappy-service/src/: and_then.rs  and_then_apply_fn.rs  apply.rs  apply_cfg.rs  boxed.rs  cell.rs  fn_service.rs  lib.rs  map.rs  map_err.rs  pipeline.rs  then.rs
scrappy-session/: Cargo.toml
scrappy-session/src/: cookie.rs  lib.rs
scrappy-string/: Cargo.toml
scrappy-testing/: Cargo.toml
scrappy-testing/src/: lib.rs
scrappy-threadpool/: Cargo.toml
scrappy-threadpool/src/: lib.rs
scrappy-tls/: Cargo.toml
scrappy-tls/src/: lib.rs  nativetls.rs  openssl.rs  rustls.rs
scrappy-tracing/: Cargo.toml
scrappy-tracing/src/: lib.rs
scrappy-utils/: Cargo.toml
scrappy-utils/src/: cell.rs  condition.rs  counter.rs  either.rs  framed.rs  inflight.rs  keepalive.rs  lib.rs  mpsc.rs  oneshot.rs  order.rs  stream.rs  task.rs  time.rs  timeout.rs
scrappy-web-actors/: Cargo.toml
scrappy-web-actors/src/: context.rs  lib.rs  ws.rs
scrappy-web-actors/tests/: test_ws.rs
scrappy-web-codegen/: Cargo.toml
scrappy-web-codegen/src/: lib.rs  route.rs
scrappy-web-codegen/tests/: test_macro.rs
src/: app.rs  app_service.rs  config.rs  data.rs  error.rs  extract.rs  guard.rs  handler.rs  lib.rs  request.rs  resource.rs  responder.rs  rmap.rs  route.rs  scope.rs  server.rs  service.rs  test.rs  web.rs
src/middleware/: compress.rs  condition.rs  defaultheaders.rs  errhandlers.rs  logger.rs  normalize.rs
src/types/: form.rs  json.rs  path.rs  payload.rs  query.rs  readlines.rs
tests/: cert.pem  test_httpserver.rs  test_server.rs
