[package]
name = "scrappy"
version = "0.0.2"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "scrappy is the best web framework for Rust"
keywords = ["scrappy", "http", "web", "framework", "async"]
homepage = "https://apibill.me"
repository = "https://github.com/apibillme/scrappy"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::websocket"]
license = "MIT"
edition = "2018"

[lib]
name = "scrappy"
path = "src/lib.rs"

[workspace]
members = [
  ".",
  "scrappy-actor",
  "scrappy-derive",
  "scrappy-client",
  "scrappy-http",
  "scrappy-cors",
  "scrappy-files",
  "scrappy-framed",
  "scrappy-session",
  "scrappy-identity",
  "scrappy-multipart",
  "scrappy-web-actors",
  "scrappy-web-codegen",
  "scrappy-http-test",
  "scrappy-codec",
  "scrappy-connect",
  "scrappy-ioframe",
  "scrappy-rt",
  "scrappy-macros",
  "scrappy-service",
  "scrappy-server",
  "scrappy-testing",
  "scrappy-threadpool",
  "scrappy-tls",
  "scrappy-tracing",
  "scrappy-utils",
  "scrappy-router",
  "scrappy-string",
]

[features]
default = ["compress", "failure"]

# content-encoding support
compress = ["scrappy-http/compress", "scrappy-client/compress"]

# sessions feature, session require "ring" crate and c compiler
secure-cookies = ["scrappy-http/secure-cookies"]

failure = ["scrappy-http/failure"]

# openssl
openssl = ["scrappy-tls/openssl", "scrappy-client/openssl", "open-ssl"]

# rustls
rustls = ["scrappy-tls/rustls", "scrappy-client/rustls", "rust-tls"]

[dependencies]

scrappy-codec = { path="./scrappy-codec", version="0.0.1" }
scrappy-service = { path="./scrappy-service", version="0.0.1" }
scrappy-utils = { path="./scrappy-utils", version="0.0.1" }
scrappy-router ={ path="./scrappy-router", version="0.0.1" }
scrappy-rt = { path="./scrappy-rt", version="0.0.1" }
scrappy-server = { path="./scrappy-server", version="0.0.1" }
scrappy-testing = { path="./scrappy-testing", version="0.0.1" }
scrappy-macros = { path="./scrappy-macros", version="0.0.1" }
scrappy-threadpool = { path="./scrappy-threadpool", version="0.0.1" }
scrappy-tls = { path="./scrappy-tls", version="0.0.1" }

scrappy-web-codegen = { path="./scrappy-web-codegen", version="0.0.1" }
scrappy-http = { path="./scrappy-http", version="0.0.1" }
scrappy-client = { path="./scrappy-client", version="0.0.1", default-features = false }

bytes = "0.5.3"
derive_more = "0.99.2"
encoding_rs = "0.8"
futures = "0.3.1"
fxhash = "0.2.1"
log = "0.4"
mime = "0.3"
net2 = "0.2.33"
pin-project = "0.4.6"
regex = "1.3"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6.1"
time = "0.1.42"
url = "2.1"
open-ssl = { version="0.10", package = "openssl", optional = true }
rust-tls = { version = "0.16.0", package = "rustls", optional = true }

[dev-dependencies]
scrappy-actor = { path="./scrappy-actor", version="0.0.1" }
rand = "0.7"
env_logger = "0.6"
serde_derive = "1.0"
brotli2 = "0.3.2"
flate2 = "1.0.13"
