[package]
name = "scrappy-codec"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "Utilities for encoding and decoding frames"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://scrappy.rs"
repository = "https://github.com/scrappy/scrappy-net.git"
documentation = "https://docs.rs/scrappy-codec/"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2018"

[dependencies]
bitflags = "1.2.1"
bytes = "0.5.2"
futures-core = "0.3.1"
futures-sink = "0.3.1"
tokio = { version = "0.2.4", default-features=false }
tokio-util = { version = "0.2.0", default-features=false, features=["codec"] }
log = "0.4"