[package]
name = "scrappy-connect"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "scrappy connect - tcp connector service"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://apibill.me"
repository = "https://github.com/apibillme/scrappy"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2018"

[features]
default = ["uri"]

# openssl
openssl = ["open-ssl", "tokio-openssl"]

# rustls
rustls = ["rust-tls", "tokio-rustls", "webpki"]

# support http::Uri as connect address
uri = ["http"]

[dependencies]
scrappy-service =  { path="../scrappy-service", version="0.0.1" }
scrappy-codec =  { path="../scrappy-codec", version="0.0.1" }
scrappy-utils = { path="../scrappy-utils", version="0.0.1" }
scrappy-rt = { path="../scrappy-rt", version="0.0.1" }
derive_more = "0.99.2"
either = "1.5.3"
futures = "0.3.1"
http = { version = "0.2.0", optional = true }
log = "0.4"
trust-dns-proto = "=0.18.0-alpha.2"
trust-dns-resolver = "=0.18.0-alpha.2"

# openssl
open-ssl = { version="0.10", package = "openssl", optional = true }
tokio-openssl = { version = "0.4.0", optional = true }

# rustls
rust-tls = { version = "0.16.0", package = "rustls", optional = true }
tokio-rustls = { version = "0.12.0", optional = true }
webpki = { version = "0.21", optional = true }

[dev-dependencies]
bytes = "0.5.3"
scrappy-testing = { path="../scrappy-testing", version="0.0.1" }
