[package]
name = "scrappy-http"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "scrappy http primitives"
readme = "README.md"
keywords = ["scrappy", "http", "framework", "async", "futures"]
homepage = "https://apibill.me"
repository = "https://github.com/apibillme/scrappy"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::websocket"]
license = "MIT"
edition = "2018"

[features]
default = []

# failure integration. scrappy does not use failure anymore
failure = ["fail-ure"]

# openssl
openssl = ["scrappy-tls/openssl", "scrappy-connect/openssl"]

# rustls support
rustls = ["scrappy-tls/rustls", "scrappy-connect/rustls"]

# enable compressison support
compress = ["flate2", "brotli2"]

# support for secure cookies
secure-cookies = ["ring"]

[dependencies]
scrappy-service = { path="../scrappy-service", version="0.0.1" }
scrappy-codec =  { path="../scrappy-codec", version="0.0.1" }
scrappy-connect = { path="../scrappy-connect", version="0.0.1" }
scrappy-utils =  { path="../scrappy-utils", version="0.0.1" }
scrappy-rt =  { path="../scrappy-rt", version="0.0.1" }
scrappy-threadpool = { path="../scrappy-threadpool", version="0.0.1" }
scrappy-tls = { path="../scrappy-tls", version="0.0.1", optional=true }

base64 = "0.11"
bitflags = "1.2"
bytes = "0.5.3"
copyless = "0.1.4"
chrono = "0.4.6"
derive_more = "0.99.2"
either = "1.5.3"
encoding_rs = "0.8"
futures-core = "0.3.1"
futures-util = "0.3.1"
futures-channel = "0.3.1"
fxhash = "0.2.1"
h2 = "0.2.1"
http = "0.2.0"
httparse = "1.3"
indexmap = "1.3"
lazy_static = "1.4"
language-tags = "0.2"
log = "0.4"
mime = "0.3"
percent-encoding = "2.1"
pin-project = "0.4.6"
rand = "0.7"
regex = "1.3"
serde = "1.0"
serde_json = "1.0"
sha-1 = "0.8"
slab = "0.4"
serde_urlencoded = "0.6.1"
time = "0.1.42"

# for secure cookie
ring = { version = "0.16.9", optional = true }

# compression
brotli2 = { version="0.3.2", optional = true }
flate2 = { version = "1.0.13", optional = true }

# optional deps
fail-ure = { version = "0.1.5", package="failure", optional = true }

[dev-dependencies]
scrappy-server = { path="../scrappy-server", version="0.0.1" }
scrappy-connect = { path="../scrappy-connect", version="0.0.1", features=["openssl"]}
scrappy-http-test = { path="../scrappy-http-test", version="0.0.1", features=["openssl"] }
scrappy-tls = { path="../scrappy-tls", version="0.0.1", features=["openssl"] }
futures = "0.3.1"
env_logger = "0.6"
serde_derive = "1.0"
open-ssl = { version="0.10", package = "openssl" }
rust-tls = { version="0.16", package = "rustls" }
