[package]
name = "scrappy-ioframe"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "scrappy framed service"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://apibill.me"
repository = "https://github.com/apibillme/scrappy"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2018"

[dependencies]
scrappy-service = { path="../scrappy-service", version="0.0.1" }
scrappy-codec =  { path="../scrappy-codec", version="0.0.1" }
scrappy-utils =  { path="../scrappy-utils", version="0.0.1" }
scrappy-rt =  { path="../scrappy-rt", version="0.0.1" }
bytes = "0.5.3"
either = "1.5.3"
futures = "0.3.1"
pin-project = "0.4.6"
log = "0.4"

[dev-dependencies]
scrappy-connect =  { path="../scrappy-connect", version="0.0.1" }
scrappy-testing =  { path="../scrappy-testing", version="0.0.1" }
