[package]
name = "scrappy-macros"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "scrappy runtime macros"
repository = "https://github.com/scrappy/scrappy-net"
documentation = "https://docs.rs/scrappy-macros/"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "^1"
syn = { version = "^1", features = ["full"] }
