[package]
name = "scrappy-router"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "Path router"
keywords = ["scrappy"]
homepage = "https://scrappy.rs"
repository = "https://github.com/scrappy/scrappy-net.git"
documentation = "https://docs.rs/scrappy-router/"
license = "MIT"
edition = "2018"

[lib]
name = "scrappy_router"
path = "src/lib.rs"

[features]
default = ["http"]

[dependencies]
regex = "1.3.1"
serde = "1.0.104"
bytestring = "0.1.2"
log = "0.4.8"
http = { version="0.2.0", optional=true }

[dev-dependencies]
http = "0.2.0"
serde_derive = "1.0"
