[package]
name = "scrappy-server"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "scrappy server - General purpose tcp server"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://apibill.me"
repository = "https://github.com/apibillme/scrappy"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2018"

[features]
default = []

[dependencies]
scrappy-service = { path="../scrappy-service", version="0.0.1" }
scrappy-rt = { path="../scrappy-rt", version="0.0.1" }
scrappy-codec = { path="../scrappy-codec", version="0.0.1" }
scrappy-utils = { path="../scrappy-utils", version="0.0.1" }

log = "0.4"
num_cpus = "1.11"
mio = "0.6.19"
net2 = "0.2"
futures = "0.3.1"
slab = "0.4"

# unix domain sockets
mio-uds = { version = "0.6.7" }

[dev-dependencies]
bytes = "0.5"
env_logger = "0.7"
