[package]
name = "scrappy-testing"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "scrappy testing utils"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://apibill.me"
repository = "https://github.com/apibillme/scrappy"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2018"

[dependencies]
scrappy-rt = { path="../scrappy-rt", version="0.0.1" }
scrappy-macros = { path="../scrappy-macros", version="0.0.1" }
scrappy-server = { path="../scrappy-server", version="0.0.1" }
scrappy-service = { path="../scrappy-service", version="0.0.1" }

log = "0.4"
net2 = "0.2"
futures = "0.3.1"
