[package]
name = "scrappy-threadpool"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "scrappy thread pool for sync code"
keywords = ["scrappy", "network", "framework", "async", "futures"]
homepage = "https://scrappy.rs"
repository = "https://github.com/scrappy/scrappy-net.git"
documentation = "https://docs.rs/scrappy-threadpool/"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2018"

[dependencies]
derive_more = "0.99.2"
futures-channel = "0.3.1"
parking_lot = "0.10"
lazy_static = "1.3"
log = "0.4"
num_cpus = "1.10"
threadpool = "1.7"
