[package]
name = "scrappy-tls"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
description = "scrappy tls services"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://apibill.me"
repository = "https://github.com/apibillme/scrappy"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
features = ["openssl", "rustls", "nativetls"]

[features]
default = []

# openssl
openssl = ["open-ssl", "tokio-openssl"]

# rustls
rustls = ["rust-tls", "webpki", "webpki-roots", "tokio-rustls"]

# nativetls
nativetls = ["native-tls", "tokio-tls"]

[dependencies]
scrappy-service = { path="../scrappy-service", version="0.0.1" }
scrappy-codec = { path="../scrappy-codec", version="0.0.1" }
scrappy-utils = { path="../scrappy-utils", version="0.0.1" }
scrappy-rt = { path="../scrappy-rt", version="0.0.1" }
derive_more = "0.99.2"
either = "1.5.2"
futures = "0.3.1"
log = "0.4"

# openssl
open-ssl = { version="0.10", package = "openssl", optional = true }
tokio-openssl = { version = "0.4.0", optional = true }

# rustls
rust-tls = { version = "0.16.0", package = "rustls", optional = true }
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.17", optional = true }
tokio-rustls = { version = "0.12.0", optional = true }

# native-tls
native-tls = { version="0.2", optional = true }
tokio-tls = { version="0.3", optional = true }

[dev-dependencies]
bytes = "0.5"
scrappy-testing = { path="../scrappy-testing", version="0.0.1" }
